--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 h1 World Database
 
-a(href='/countries.html') Countries [#{countriesCount}]
+a(href='/countries') Countries [#{countriesCount}]
 br
-a(href='/cities.html') Cities [#{citiesCount}]
+a(href='/cities') Cities [#{citiesCount}]
